package coreo


abstract class NAV(own: CanOwn) extends FRM(own) {

}
