package coreo

import com.microsoft.playwright.{Locator, Page}

abstract class OBJ {
  def pg: Page

  def myType: String = this.getClass.getSimpleName.reverse.dropWhile( _.toString == "_").reverse.mkString("")

  protected def pre = {
    val cla = this.getClass
    val n = cla.getName
    val t = cla.getTypeName
    s"$n $t"
  }

  def log(msg: Any) =
    println(pre + "." + msg)

  def page2Loc( l:Locator):Function1[Page, Locator] = new Function1[Page,Locator]{
    def apply( p:Page):Locator = l
  }

  def weight = 1
}
